# UQM-MegaModern

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conan_howto.md  conanfile.py  conanfile.txt  run_clang_format.ps1
.claude/: settings.local.json
.github/workflows/: build.yml
CMake/: generate_directory_cmake_files.py  helpers.cmake  win_files.txt
doc/: doc.cmake
doc/devel/: devel.cmake  dialogs
doc/devel/netplay/: netplay.cmake
doc/fonts/: fonts.cmake
doc/release/: release.cmake
doc/users/: users.cmake
src/: .clang-format  UQMGame.cpp  UQMGame.h  config.h  config_vc6.h  endian_uqm.h  main.cpp  options.cpp  options.h  port.cpp  port.h  src.cmake  types.h  uqm.cpp  uqmversion.h
src/configuration/: Configuration.cpp  Configuration.h  configuration.cmake
src/core/: core.cmake
src/core/log/: BacktraceCaptureSink.cpp  BacktraceCaptureSink.h  log.cmake  log.h  logger.cpp  logger.h
src/core/memory/: memory.cmake  memory.h
src/core/misc/: bittricks.h  misc.cmake
src/core/platform/: platform.cmake  platform.h  platform_win.cpp
src/core/stl/: array.h  map.h  memory.h  optional.h  ring_buffer.h  stl.cmake  stl.cpp  stl.h  string.h  vector.h
src/core/string/: StringUtils.cpp  StringUtils.h  string.cmake
src/core/types/: enum.h  types.cmake
src/getopt/: getopt.cmake  getopt.cpp  getopt.h  getopt1.cpp
src/lib/: lib.cmake
src/lib/Math2D/: Math2D.cmake  Math2D.cpp  Math2D.h  Math2DStringUtils.cpp  Math2DStringUtils.h
src/libs/: alarm.h  async.h  callback.h  cdplib.h  compiler.h  declib.h  file.h  gfxlib.h  heap.h  inplib.h  libs.cmake  list.h  log.h  mathlib.h  md5.h  memlib.h  misc.h  net.h  platform.h  reslib.h  scriptlib.h  sndlib.h  strlib.h  tasklib.h  threadlib.h  timelib.h  uio.h  uioutils.h  unicode.h  vidlib.h
src/libs/callback/: alarm.cpp  alarm.h  async.cpp  async.h  callback.cmake  callback.cpp  callback.h
src/libs/cdp/: cdp.cmake  cdp.cpp  cdp.h  cdp_alli.h  cdp_iio.h  cdp_imem.h  cdp_isnd.h  cdp_ivid.h  cdpapi.cpp  cdpapi.h  cdpint.h  cdpmod.h  windl.cpp  windl.h
src/libs/decomp/: decomp.cmake  lzdecode.cpp  lzencode.cpp  lzh.h  update.cpp
src/libs/file/: dirs.cpp  file.cmake  files.cpp  filintrn.h  temp.cpp
src/libs/graphics/: bbox.cpp  bbox.h  boxint.cpp  clipline.cpp  cmap.c  cmap.cpp  cmap.h  context.cpp  context.h  dcqueue.cpp  dcqueue.h  drawable.cpp  drawable.h  drawcmd.h  filegfx.cpp  font.cpp  font.h  frame.cpp  gfx_common.cpp  gfx_common.h  gfx_defs.h  gfxintrn.h  gfxload.cpp  graphics.cmake  intersec.cpp  loaddisp.cpp  pixmap.cpp  prim.h  resgfx.cpp  tfb_draw.cpp  tfb_draw.h  tfb_prim.cpp  tfb_prim.h  widgets.cpp  widgets.h
src/libs/heap/: heap.cmake  heap.cpp  heap.h
src/libs/input/: inpintrn.h  input.cmake  input_common.cpp  input_common.h
src/libs/list/: list.cmake  list.cpp  list.h
src/libs/log/: log.cmake  loginternal.h  msgbox.h  msgbox_stub.cpp  msgbox_win.cpp  uqmlog.cpp  uqmlog.h
src/libs/lua/: lapi.cpp  lapi.h  lauxlib.cpp  lauxlib.h  lbaselib.cpp  lbitlib.cpp  lcode.cpp  lcode.h  lcorolib.cpp  lctype.cpp  lctype.h  ldblib.cpp  ldebug.cpp  ldebug.h  ldo.cpp  ldo.h  ldump.cpp  lfunc.cpp  lfunc.h  lgc.cpp  lgc.h  linit.cpp  liolib.cpp  llex.cpp  llex.h  llimits.h  lmathlib.cpp  lmem.cpp  lmem.h  loadlib.cpp  lobject.cpp  lobject.h  lopcodes.cpp  lopcodes.h  loslib.cpp  lparser.cpp  lparser.h  lstate.cpp  lstate.h  lstring.cpp  (+19 more)
src/libs/luauqm/: luauqm.cmake  luauqm.cpp  luauqm.h  scriptres.cpp  scriptres.h
src/libs/math/: math.cmake  mthintrn.h  random.cpp  random.h  random2.cpp  randomdefs.h  sqrt.cpp
src/libs/md5/: md5.cmake  md5.cpp  md5.h
src/libs/memory/: memory.cmake  w_memlib.cpp
src/libs/mikmod/: drv_nos.cpp  load_it.cpp  load_mod.cpp  load_s3m.cpp  load_stm.cpp  load_xm.cpp  mdreg.cpp  mdriver.cpp  mdulaw.cpp  mikmod.cmake  mikmod.h  mikmod_build.h  mikmod_ctype.h  mikmod_internals.h  mloader.cpp  mlreg.cpp  mlutil.cpp  mmalloc.cpp  mmerror.cpp  mmio.cpp  mplayer.cpp  munitrk.cpp  mwav.cpp  npertab.cpp  sloader.cpp  virtch.cpp  virtch2.cpp  virtch_common.cpp
src/libs/network/: bytesex.h  netport.cpp  netport.h  network.cmake  network.h  network_bsd.cpp  network_win.cpp  wspiapiwrap.cpp  wspiapiwrap.h
src/libs/resource/: direct.cpp  filecntl.cpp  getres.cpp  index.h  loadres.cpp  propfile.cpp  propfile.h  resinit.cpp  resintrn.h  resource.cmake  stringbank.cpp  stringbank.h
src/libs/sound/: audiocore.cpp  audiocore.h  audiocoredefs.h  fileinst.cpp  music.cpp  resinst.cpp  sfx.cpp  sndintrn.h  sound.cmake  sound.cpp  sound.h  stream.cpp  stream.h  trackint.h  trackplayer.cpp  trackplayer.h
src/libs/strings/: getstr.cpp  sfileins.cpp  sresins.cpp  stringhashtable.cpp  stringhashtable.h  strings.cmake  strings.cpp  strintrn.h  unicode.cpp
src/libs/task/: task.cmake  tasklib.cpp
src/libs/threads/: thrcommon.cpp  thrcommon.h  threads.cmake
src/libs/time/: time.cmake  timecommon.cpp  timecommon.h  timelib.h
src/libs/uio/: charhashtable.cpp  charhashtable.h  debug.cpp  debug.h  defaultfs.cpp  defaultfs.h  fileblock.cpp  fileblock.h  fstypes.cpp  fstypes.h  getint.h  gphys.cpp  (+30 more)
src/options/: OptionConstants.h  OptionDefs.h  OptionTypes.h  netoptions.cpp  netoptions.h  options.cmake  options.cpp  options.h
src/res/: res.cmake
src/uqm/: StarmapGlobalData.h  battle.cpp  battle.h  battlecontrols.cpp  battlecontrols.h  border.cpp  build.cpp  build.h  cleanup.cpp  clock.cpp  clock.h  cnctdlg.cpp  cnctdlg.h  coderes.h  collide.cpp  collide.h  colors.h  comm.cpp  comm.h  commanim.cpp  commanim.h  commglue.cpp  commglue.h  confirm.cpp  cons_res.cpp  cons_res.h  controls.h  corecode.h  credits.cpp  credits.h  cyborg.cpp  demo.cpp  demo.h  displist.cpp  displist.h  dummy.cpp  dummy.h  element.h  encount.cpp  encount.h  (+97 more)
test/: CMakeLists.txt
test/tests/: test_foo.cpp  tests.cmake
test/tests/core/: core.cmake  test_StringUtils.cpp  test_log_BacktraceCaptureSink.cpp  test_ring_buffer.cpp
test/tests/lib/: lib.cmake  test_Math2D.cpp
test/tests/libs/: libs.cmake  test_callback.cpp
test/tests/options/: options.cmake  testOptions.cpp
test/tests/uqm/: test_intel.cpp  uqm.cmake
(+512 files in other folders)
